- provide backup program for btrfs snapshots

--- a/client/Makefile.am
+++ b/client/Makefile.am
@@ -2,4 +2,4 @@
 # Makefile.am for snapper/client
 #
 
-SUBDIRS = utils proxy snapper mksubvolume installation-helper systemd-helper
+SUBDIRS = utils proxy snapper mksubvolume installation-helper systemd-helper snbk
