- added new workflow using only two steps to installation-helper

--- a/client/installation-helper/Makefile.am
+++ b/client/installation-helper/Makefile.am
@@ -2,7 +2,7 @@
 # Makefile.am for snapper/client/installation-helper
 #
 
-AM_CPPFLAGS = -I$(top_srcdir)
+AM_CPPFLAGS = -I$(top_srcdir) $(XML2_CFLAGS)
 
 libexecdir = /usr/lib/snapper
 
