--- a/.github/workflows/codespell.yml
+++ b/.github/workflows/codespell.yml
@@ -8,16 +8,14 @@ on:
   pull_request:
     branches: [master]
 
-permissions:
-  contents: read
-
 jobs:
-  codespell:
+  Codespell:
     name: Check for spelling errors
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Codespell
-        uses: codespell-project/actions-codespell@v2
+        # third-party so better use commit shasum (here of v2)
+        uses: codespell-project/actions-codespell@94259cd8be02ad2903ba34a22d9c13de21a74461
