- allow to set path for more commands on the target

--- a/configure.ac
+++ b/configure.ac
@@ -38,6 +38,7 @@ AC_PATH_PROG([LVM_BIN], [lvm], [/sbin/lvm])
 AC_PATH_PROG([LVREMOVE_BIN], [lvremove], [/sbin/lvremove])
 AC_PATH_PROG([LVRENAME_BIN], [lvrename], [/sbin/lvrename])
 AC_PATH_PROG([LVS_BIN], [lvs], [/sbin/lvs])
+AC_PATH_PROG([MKDIR_BIN], [mkdir], [/bin/mkdir])
 AC_PATH_PROG([REALPATH_BIN], [realpath], [/usr/bin/realpath])
 AC_PATH_PROG([RM_BIN], [rm], [/bin/rm])
 AC_PATH_PROG([RMDIR_BIN], [rmdir], [/bin/rmdir])
@@ -55,6 +56,7 @@ AC_DEFINE_UNQUOTED([LVM_BIN], ["$LVM_BIN"], [Path of lvm program.])
 AC_DEFINE_UNQUOTED([LVREMOVE_BIN], ["$LVREMOVE_BIN"], [Path of lvremove program.])
 AC_DEFINE_UNQUOTED([LVRENAME_BIN], ["$LVRENAME_BIN"], [Path of lvrename program.])
 AC_DEFINE_UNQUOTED([LVS_BIN], ["$LVS_BIN"], [Path of lvs program.])
+AC_DEFINE_UNQUOTED([MKDIR_BIN], ["$MKDIR_BIN"], [Path of mkdir program.])
 AC_DEFINE_UNQUOTED([REALPATH_BIN], ["$REALPATH_BIN"], [Path of realpath program.])
 AC_DEFINE_UNQUOTED([RM_BIN], ["$RM_BIN"], [Path of rm program.])
 AC_DEFINE_UNQUOTED([RMDIR_BIN], ["$RMDIR_BIN"], [Path of rmdir program.])
