--- a/doc/snapper-backup-configs.xml.in
+++ b/doc/snapper-backup-configs.xml.in
@@ -2,13 +2,13 @@
 <refentry id='snapper-backup-configs5'>
 
   <refentryinfo>
-    <date>2024-12-17</date>
+    <date>2025-04-09</date>
   </refentryinfo>
 
   <refmeta>
     <refentrytitle>snapper-backup-configs</refentrytitle>
     <manvolnum>5</manvolnum>
-    <refmiscinfo class='date'>2024-12-17</refmiscinfo>
+    <refmiscinfo class='date'>2025-04-09</refmiscinfo>
     <refmiscinfo class='version'>@VERSION@</refmiscinfo>
     <refmiscinfo class='manual'>Filesystem Snapshot Management</refmiscinfo>
   </refmeta>
@@ -105,21 +105,48 @@
       <varlistentry>
 	<term><option>target-btrfs-bin</option></term>
 	<listitem>
-	  <para>Location of the btrfs binary on the target. Optional.</para>
-	</listitem>
-      </varlistentry>
-
-      <varlistentry>
-	<term><option>target-realpath-bin</option></term>
-	<listitem>
-	  <para>Location of the realpath binary on the target. Optional.</para>
+	  <para>Location of the btrfs binary on the target. Can also
+	  be used to install wrapper scripts. Optional.</para>
 	</listitem>
       </varlistentry>
 
       <varlistentry>
 	<term><option>target-findmnt-bin</option></term>
 	<listitem>
-	  <para>Location of the findmnt binary on the target. Optional.</para>
+	  <para>Location of the findmnt binary on the target. Can also
+	  be used to install wrapper scripts. Optional.</para>
+	</listitem>
+      </varlistentry>
+
+      <varlistentry>
+	<term><option>target-mkdir-bin</option></term>
+	<listitem>
+	  <para>Location of the mkdir binary on the target. Can also
+	  be used to install wrapper scripts. Optional.</para>
+	</listitem>
+      </varlistentry>
+
+      <varlistentry>
+	<term><option>target-realpath-bin</option></term>
+	<listitem>
+	  <para>Location of the realpath binary on the target. Can also
+	  be used to install wrapper scripts. Optional.</para>
+	</listitem>
+      </varlistentry>
+
+      <varlistentry>
+	<term><option>target-rm-bin</option></term>
+	<listitem>
+	  <para>Location of the rm binary on the target. Can also
+	  be used to install wrapper scripts. Optional.</para>
+	</listitem>
+      </varlistentry>
+
+      <varlistentry>
+	<term><option>target-rmdir-bin</option></term>
+	<listitem>
+	  <para>Location of the rmdir binary on the target. Can also
+	  be used to install wrapper scripts. Optional.</para>
 	</listitem>
       </varlistentry>
 
