--- a/doc/snapper.xml.in
+++ b/doc/snapper.xml.in
@@ -2,13 +2,13 @@
 <refentry id='snapper8' xmlns:xlink="http://www.w3.org/1999/xlink">
 
   <refentryinfo>
-    <date>2024-10-24</date>
+    <date>2025-07-23</date>
   </refentryinfo>
 
   <refmeta>
     <refentrytitle>snapper</refentrytitle>
     <manvolnum>8</manvolnum>
-    <refmiscinfo class='date'>2024-10-24</refmiscinfo>
+    <refmiscinfo class='date'>2025-07-23</refmiscinfo>
     <refmiscinfo class='version'>@VERSION@</refmiscinfo>
     <refmiscinfo class='manual'>Filesystem Snapshot Management</refmiscinfo>
   </refmeta>
@@ -207,6 +207,13 @@
 	<term><option>-v, --verbose</option></term>
 	<listitem>
 	  <para>Increase verbosity.</para>
+	</listitem>
+      </varlistentry>
+      <varlistentry>
+	<term><option>--logger-type  <replaceable>type</replaceable></option></term>
+	<listitem>
+	  <para>Set the logger type. Possible values are none, stdout,
+	  logfile and syslog.</para>
 	</listitem>
       </varlistentry>
       <varlistentry>
