--- a/dbus/Makefile.am
+++ b/dbus/Makefile.am
@@ -15,4 +15,4 @@ libdbus_la_SOURCES =					\
 	DBusMainLoop.cc		DBusMainLoop.h
 
 libdbus_la_LIBADD = $(DBUS_LIBS)
-libdbus_la_LDFLAGS = -lboost_system -lboost_thread
+libdbus_la_LDFLAGS = -lboost_thread
