--- a/snapper/Makefile.am
+++ b/snapper/Makefile.am
@@ -71,7 +71,7 @@ endif
 
 libsnapper_la_CPPFLAGS = $(XML2_CFLAGS) $(ZLIB_CFLAGS)
 libsnapper_la_LDFLAGS = -version-info @LIBVERSION_INFO@
-libsnapper_la_LIBADD = -lboost_thread -lboost_system $(XML2_LIBS) -lacl $(ZLIB_LIBS)
+libsnapper_la_LIBADD = -lboost_thread $(XML2_LIBS) -lacl $(ZLIB_LIBS)
 if ENABLE_ROLLBACK
 libsnapper_la_LIBADD += -lmount
 endif
