--- a/Makefile.am
+++ b/Makefile.am
@@ -17,6 +17,7 @@ DEBIAN_FLAVOURS =	\
 	Debian_10.0	\
 	Debian_11.0	\
 	Debian_12.0	\
+	Debian_13.0	\
 	Debian_Unstable
 
 UBUNTU_FLAVOURS =	\
@@ -34,12 +35,14 @@ UBUNTU_FLAVOURS =	\
 	xUbuntu_23.10	\
 	xUbuntu_24.04	\
 	xUbuntu_24.10	\
-	xUbuntu_25.04
+	xUbuntu_25.04	\
+	xUbuntu_25.10
 
 RASPBIAN_FLAVOURS =	\
 	Raspbian_10	\
 	Raspbian_11	\
-	Raspbian_12
+	Raspbian_12	\
+	Raspbian_13
 
 show-debian:
 	@echo "Debian flavors: $(DEBIAN_FLAVOURS)"
