--- a/doc/snapper-backup-configs.xml.in
+++ b/doc/snapper-backup-configs.xml.in
@@ -2,13 +2,13 @@
 <refentry id='snapper-backup-configs5'>
 
   <refentryinfo>
-    <date>2025-04-09</date>
+    <date>2025-10-07</date>
   </refentryinfo>
 
   <refmeta>
     <refentrytitle>snapper-backup-configs</refentrytitle>
     <manvolnum>5</manvolnum>
-    <refmiscinfo class='date'>2025-04-09</refmiscinfo>
+    <refmiscinfo class='date'>2025-10-07</refmiscinfo>
     <refmiscinfo class='version'>@VERSION@</refmiscinfo>
     <refmiscinfo class='manual'>Filesystem Snapshot Management</refmiscinfo>
   </refmeta>
@@ -99,6 +99,33 @@
 	<listitem>
 	  <para>An ssh-identity to access the host without requiring a
 	  password or passphrase. Optional for target mode ssh-push.</para>
+	</listitem>
+      </varlistentry>
+
+      <varlistentry>
+	<term><option>send-compressed-data</option></term>
+	<listitem>
+	  <para>Per default snbk will add the option --compressed-data iff
+	  supported by the source and target system. This can be disable by
+	  setting this value to false.</para>
+	</listitem>
+      </varlistentry>
+
+      <varlistentry>
+	<term><option>send-options</option></term>
+	<listitem>
+	  <para>Extra options for the btrfs send command as an array
+	  of strings. Optional.</para>
+	  <para>Per default snbk automatically adds --proto and --compressed-data
+	  iff supported by both the source and target.</para>
+	</listitem>
+      </varlistentry>
+
+      <varlistentry>
+	<term><option>receive-options</option></term>
+	<listitem>
+	  <para>Extra options for the btrfs receive command as an
+	  array of strings. Optional.</para>
 	</listitem>
       </varlistentry>
 
