--- a/doc/snapper-backup-configs.xml.in
+++ b/doc/snapper-backup-configs.xml.in
@@ -2,13 +2,13 @@
 <refentry id='snapper-backup-configs5'>
 
   <refentryinfo>
-    <date>2025-10-07</date>
+    <date>2025-10-13</date>
   </refentryinfo>
 
   <refmeta>
     <refentrytitle>snapper-backup-configs</refentrytitle>
     <manvolnum>5</manvolnum>
-    <refmiscinfo class='date'>2025-10-07</refmiscinfo>
+    <refmiscinfo class='date'>2025-10-13</refmiscinfo>
     <refmiscinfo class='version'>@VERSION@</refmiscinfo>
     <refmiscinfo class='manual'>Filesystem Snapshot Management</refmiscinfo>
   </refmeta>
@@ -138,9 +138,9 @@
       </varlistentry>
 
       <varlistentry>
-	<term><option>target-findmnt-bin</option></term>
+	<term><option>target-ls-bin</option></term>
 	<listitem>
-	  <para>Location of the findmnt binary on the target. Can also
+	  <para>Location of the ls binary on the target. Can also
 	  be used to install wrapper scripts. Optional.</para>
 	</listitem>
       </varlistentry>
@@ -149,14 +149,6 @@
 	<term><option>target-mkdir-bin</option></term>
 	<listitem>
 	  <para>Location of the mkdir binary on the target. Can also
-	  be used to install wrapper scripts. Optional.</para>
-	</listitem>
-      </varlistentry>
-
-      <varlistentry>
-	<term><option>target-realpath-bin</option></term>
-	<listitem>
-	  <para>Location of the realpath binary on the target. Can also
 	  be used to install wrapper scripts. Optional.</para>
 	</listitem>
       </varlistentry>
