service: add CAP_SYS_CHROOT for sdbootutil
The snapper plugin from sdbootutil can create initrds when new boot
entries are added.  The current implementation is using chroot instead
of the --sysroot parameter, as is considered more error-prone.

This patch add the CAP_SYS_CHROOT capability to allow the creation of
chroots when new initrds are required.

Signed-off-by: Alberto Planas <aplanas@suse.com>

--- a/data/backup.service
+++ b/data/backup.service
@@ -8,7 +8,7 @@ Type=simple
 WorkingDirectory=/root
 ExecStart=/usr/sbin/snbk --verbose --automatic transfer-and-delete
 
-CapabilityBoundingSet=CAP_DAC_OVERRIDE CAP_FOWNER CAP_CHOWN CAP_FSETID CAP_SETFCAP CAP_SYS_ADMIN CAP_SYS_MODULE CAP_IPC_LOCK CAP_SYS_NICE
+CapabilityBoundingSet=CAP_DAC_OVERRIDE CAP_FOWNER CAP_CHOWN CAP_FSETID CAP_SETFCAP CAP_SYS_ADMIN CAP_SYS_MODULE CAP_IPC_LOCK CAP_SYS_NICE CAP_SYS_CHROOT
 LockPersonality=true
 NoNewPrivileges=false
 ProtectHostname=true
