- added test program

--- a/stomp/testsuite/Makefile.am
+++ b/stomp/testsuite/Makefile.am
@@ -9,7 +9,7 @@ LDADD =								\
 	-lboost_unit_test_framework
 
 check_PROGRAMS =						\
-	read1.test write1.test escape.test
+	read1.test write1.test escape.test strip.test
 
 AM_DEFAULT_SOURCE_EXT = .cc
 
