fix out-of-tree build (builddir != srcdir)
autoconf and automake mostly give us this for free, but we do have to
take some care.

This enables out-of-tree builds configured such as:

	(cd /obj/snapper && ~/work/snapper/configure ...)
	make -C /obj/snapper ...

--- a/configure.ac
+++ b/configure.ac
@@ -2,12 +2,12 @@ AC_INIT
 
 AC_CONFIG_SRCDIR([snapper/Snapper.h])
 
-VERSION=`cat ./VERSION`
+VERSION=`cat "$srcdir/VERSION"` || exit
 
-LIBVERSION=`cat ./LIBVERSION`
-LIBVERSION_MAJOR=`cut -d . -f 1 ./LIBVERSION`
-LIBVERSION_MINOR=`cut -d . -f 2 ./LIBVERSION`
-LIBVERSION_PATCHLEVEL=`cut -d . -f 3 ./LIBVERSION`
+LIBVERSION=`cat "$srcdir/LIBVERSION"`
+LIBVERSION_MAJOR=`cut -d . -f 1 "$srcdir/LIBVERSION"`
+LIBVERSION_MINOR=`cut -d . -f 2 "$srcdir/LIBVERSION"`
+LIBVERSION_PATCHLEVEL=`cut -d . -f 3 "$srcdir/LIBVERSION"`
 
 LIBVERSION_CURRENT=`expr $LIBVERSION_MAJOR + $LIBVERSION_MINOR`
 LIBVERSION_REVISON=`expr $LIBVERSION_PATCHLEVEL`
