Report failure of 'create --command' command
When we can't even run a child process at all (system(3) returns -1),
throw runtime_error_with_errno without taking the post snapshot.

When the child is killed or exits with non-zero status, report that to
stderr and exit(EXIT_FAILURE) .

--- a/doc/snapper.xml.in
+++ b/doc/snapper.xml.in
@@ -535,7 +535,10 @@
 	    <varlistentry>
 	      <term><option>--command</option> <replaceable>command</replaceable></term>
 	      <listitem>
-		<para>Create a pre and post snapshot and run command in between.</para>
+		<para>Create a pre and post snapshot and run command in between.  If snapper is
+		unable to execute the command at all, it does not take the post snapshot.  If the
+		command exits with a non-zero exit code, snapper takes the post snapshot and exits 1
+		to indicate the failure.</para>
 	      </listitem>
 	    </varlistentry>
 	    <varlistentry>
