Reuse exit code of  'create --command' command
When the child exits with non-zero status, use it as snapper's own exit
code, as it may be meaningful.

We pass the exit code up the stack with a new CommandException type.

--- a/doc/snapper.xml.in
+++ b/doc/snapper.xml.in
@@ -537,8 +537,8 @@
 	      <listitem>
 		<para>Create a pre and post snapshot and run command in between.  If snapper is
 		unable to execute the command at all, it does not take the post snapshot.  If the
-		command exits with a non-zero exit code, snapper takes the post snapshot and exits 1
-		to indicate the failure.</para>
+		command exits with a non-zero exit code, snapper takes the post snapshot and exits
+		with that same exit code.</para>
 	      </listitem>
 	    </varlistentry>
 	    <varlistentry>
